KDirSortFilterProxyModel: bring back natural sorting

This fixes a regression of the KF5 port.

BUG: 343452
FIXED-IN: 5.34
REVIEW: 128574